* Setting the html_ or text_part to nil removes it (jeremy)
* Addresses without a parsable email or display name still format as their raw text (jeremy)
* Close pull request 399 - Accept :ca_path and :ca_file options for SMTP delivery (ndbroadbent)

Performance:
* Close pull request 488 - Speed up field construction & comparison (bpot)

Bugs:
* Calling #to_s on a field with a nil value returns an empty string instead of nil (jeremy)
* The Received header may contain zero name/value pairs, qmail-style (jeremy)
* Fix that setting an attachment with a :mime_type and :encoding would override the :encoding (jeremy)
* Fix that declaring an html_part but no text_part would use multipart/alternative anyway (jeremy)
* Close pull request 487 - Extract comments from group email addresses (bpot)
* Close pull request 481 - Correctly quote filename attributes (bpot)
* Close pull request 471 - Fix Ruby 1.8 build when UTF16/32 default to little-endian (kennyj)

Coping with third-party bugs:
* Parse multipart boundary from Content-Type headers containing extra semicolons (jeremy)

Housekeeping:
* Refresh Bundler dependencies & setup (jeremy)
* Remove i18n dependency and last vestiges of activesupport dependency in specs (jeremy)
* Clarify that Sender is a single address, not an address list (jeremy)
* Add an MIT-LICENSE file to make licensing clear & obvious; update to 2013 (jeremy)
* Close pull request 499 - Clean up some dead code (ConradIrwin)
* Close pull request 489, 495 - Docs typos (JackDanger, francois)
* Close pull request 485 - Be explicit about unsupported address parsing (bpot)
* Close pull request 484 - Remove #tree specs in preparation for deprecation removal (bpot)
* Close pull request 482 - Update address field specs to reflect to #initialize API (bpot)
* Close pull request 475 - Shush warning on Object#blank? redefinition (amatsuda)

== Version 2.5.3 - Sun Dec 4 15:52:00 +1100 2012 Mikel Lindsaar <mikel@reinteractive.net>
