@@ -184,7 +184,7 @@ module Mail
     end
 
     rule quoted_string
-      CFWS? DQUOTE quoted_content:(FWS? qcontent)+ FWS? DQUOTE CFWS?
+      CFWS? DQUOTE quoted_content:(FWS? qcontent)* FWS? DQUOTE CFWS?
     end
 
     rule qcontent
