@@ -14,9 +14,9 @@ describe Mail::PhraseList do
       doing { Mail::PhraseList.new(parse_text) }.should raise_error
     end
 
-    it "should raise an error if the input is useless" do
+    it "should not raise an error if the input is empty" do
       parse_text  = '""""""""""""""""'
-      doing { Mail::PhraseList.new(parse_text) }.should raise_error
+      Mail::PhraseList.new(parse_text).phrases.should eq [parse_text[1...-1]]
     end
   end
 end
