@@ -11,6 +11,7 @@ Performance:
 * Close pull request 488 - Speed up field construction & comparison (bpot)
 
 Bugs:
+* RFC2822 quoted_string content may be empty (jeremy)
 * Calling #to_s on a field with a nil value returns an empty string instead of nil (jeremy)
 * The Received header may contain zero name/value pairs, qmail-style (jeremy)
 * Fix that setting an attachment with a :mime_type and :encoding would override the :encoding (jeremy)
